# Ourea

./: .gitignore  CLAUDE.md  PROJECT_PLAN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file.rs  mod.rs  settings.rs  watcher.rs
src/assets/styles/: image.css  main.css  math.css  prism.css  search.css  table.css
src/components/common/: ContextMenu.vue
src/components/dialogs/: CloseConfirmDialog.vue  FormulaDialog.vue  ImageManagerDialog.vue  InputDialog.vue  SearchDialog.vue  SettingsDialog.vue
src/components/editor/: CodeEditor.vue  EditorToolbar.vue  EmptyState.vue  MilkdownEditor.vue  SelectionTooltip.vue
src/components/layout/: FileTree.vue  MainLayout.vue  Outline.vue  Sidebar.vue  StatusBar.vue  TitleBar.vue
src/composables/: useAutoSave.ts  useCloseConfirm.ts  useEditorCommands.ts  useFile.ts  useFileWatcher.ts  useMenuEvents.ts  useMilkdown.ts  useRecovery.ts  useSearch.ts  useShortcuts.ts  useTheme.ts
src/plugins/: codeBlockPlugin.ts  imagePlugin.ts  mathPlugin.ts  searchHighlightPlugin.ts  tablePlugin.ts
src/stores/: editor.ts  file.ts  settings.ts  tabs.ts  workspace.ts
src/utils/: formatCode.ts  themes.ts
